--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
 
 
