--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,13 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-		<!-- Web -->
+		<!-- Web-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.4.5</version>
 		</dependency>
+
 
 		<!-- JPA -->
 		<dependency>
@@ -90,7 +92,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
+			<version>1.18.38</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -112,6 +114,11 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
 		</dependency>
 
 		<dependency>
