--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.4.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.callisto</groupId>
 	<artifactId>callisto</artifactId>
@@ -34,22 +34,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-<<<<<<< HEAD
 
-		<!-- Web-->
-=======
->>>>>>> a265d9b76f095a9cfe4e15bbf1077d487cc0a063
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>3.4.5</version>
 		</dependency>
-<<<<<<< HEAD
 
 
-		<!-- JPA -->
-=======
->>>>>>> a265d9b76f095a9cfe4e15bbf1077d487cc0a063
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -99,7 +91,6 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-<<<<<<< HEAD
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -120,8 +111,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-=======
->>>>>>> a265d9b76f095a9cfe4e15bbf1077d487cc0a063
 	</dependencies>
 
 	<build>
